feat: stronger type safety
